Update 'wqzsd0r73-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:96feb42bab708de9656b937418a4e71230873cfb@sha256:0ed085d0956bf1fb9680e1403d7a465ca9059332f22692ecffb5ed0d52489c07

--- a/components/wqzsd0r73-go/overlays/development/deployment-patch.yaml
+++ b/components/wqzsd0r73-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: wqzsd0r73-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:96feb42bab708de9656b937418a4e71230873cfb@sha256:0ed085d0956bf1fb9680e1403d7a465ca9059332f22692ecffb5ed0d52489c07
+          name: container-image
